--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Libre+Caslon+Text&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Libre Caslon Text', serif;
 }
 
 /* Styling av ID */
@@ -9,19 +12,20 @@
 /* Start Sida */
 
 #grid_wrapper_start {
+    color: #000;
+    background-color: white;
     display: grid;
-    grid-template-columns: 4fr 1fr;
-    grid-template-rows: 100px 400px 800px 100px;
-    grid-template-areas:
-    "he na" 
-    "s1 s1"
-    "s2 s2"
-    "fo fo";
+    grid-template-columns: 1fr;
+    grid-template-rows: 400px 800px 100px;
+    grid-template-areas: 
+    "s1"
+    "s2"
+    "fo";
 }
 
 #welcome_text_section {
+    margin-top: 150px;
     grid-area: s1;
-    background-color: darkgreen;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,8 +35,8 @@
 }
 
 #actual_updates_section {
+    margin-top: 150px;
     grid-area: s2;
-    background-color: darkgoldenrod;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -41,7 +45,7 @@
 }
 
 #burger {
-    margin-right: 40px;
+    margin-right: 20px;
     cursor: pointer;
 }
 
@@ -55,8 +59,10 @@
 }
 
 #img_vapen {
-    height: 100px;
+    height: 70px;
     width: auto;
+    margin-right: 5px;
+    margin-left: 10px;
 }
 
 
@@ -74,26 +80,48 @@
 /* Styling av taggar */
 
 /* Start Sida */
+
+h1 {
+    font-family: 'Libre Caslon Text', serif;
+
+    color: #fff;
+    letter-spacing: 4px;
+    font-weight: bold;
+}
+
+h2 {
+    margin: 0px 25px 20px 25px;
+    text-align: center;
+}
+
 header {
+    background-color: rgb(0,63,94);
+    z-index: 1;
+    position: fixed;
+    top: 0;
     grid-area: he;
-    background-color: aqua;
     display: flex;
     align-items: center;
+    justify-content: flex-start;
+    height: 80px;
+    width: 300px;
 }
 
 nav{
-    background-color: black;
+    position: fixed;
+    top: 0;
 
+    background-color: rgb(0,63,94);
     padding: 5px;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    height: 100px;
+    height: 80px;
+    width: 100%;
 }
 
 footer {
     grid-area: fo;
-    background-color: blanchedalmond;
 }
 
 img {
