--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
     background-color: white;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 400px 800px 100px;
+    grid-template-rows: 600px 800px 100px;
     grid-template-areas: 
     "s1"
     "s2"
@@ -24,14 +24,17 @@
 }
 
 #welcome_text_section {
-    margin-top: 150px;
+    margin-top: 80px;
     grid-area: s1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 0 10% 0 10%;
-    
+
+    background-image: url(/img/tallin_2.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 #actual_updates_section {
@@ -96,7 +99,7 @@ h2 {
 
 header {
     background-color: rgb(0,63,94);
-    z-index: 1;
+    z-index: 2;
     position: fixed;
     top: 0;
     grid-area: he;
@@ -110,6 +113,7 @@ header {
 nav{
     position: fixed;
     top: 0;
+    z-index: 1;
 
     background-color: rgb(0,63,94);
     padding: 5px;
