--- a/css/style.css
+++ b/css/style.css
@@ -24,17 +24,15 @@
 }
 
 #welcome_text_section {
-    margin-top: 80px;
+    margin-top: 75px;
     grid-area: s1;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 0 10% 0 10%;
-
-    background-image: url(/img/tallin_2.jpg);
-    background-repeat: no-repeat;
-    background-size: contain;
+    z-index: 1;
+    color: #fff;
 }
 
 #actual_updates_section {
@@ -46,6 +44,23 @@
     align-items: center;
     padding: 0 10% 0 10%;
 }
+
+#img_area {
+    position: absolute;
+    top: 75px;
+    left: -5px;
+    height: 600px;
+    width: 110%;
+    overflow-y: hidden;
+
+
+    background-image: url(/img/tallin_2.jpg);
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    filter: blur(5px);
+}
+
 
 #burger {
     margin-right: 20px;
@@ -59,6 +74,25 @@
     margin: 5px;
     border-radius: 20%;
     transition: all 1s;
+}
+
+#link_list {
+    list-style: none;
+    background-color: #fff;
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    top: -100vh;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    transition: all 1s;
+}
+
+.link_list_visible {
+    transform: translateY(100vh);
 }
 
 #img_vapen {
@@ -80,9 +114,25 @@
     text-align: center;
 }
 
+.burger_x_form #burger_line_2 {
+    opacity: 0;
+}
+
+.burger_x_form #burger_line_1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.burger_x_form #burger_line_3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+}
+
 /* Styling av taggar */
 
 /* Start Sida */
+
+body {
+    overflow-x: hidden;
+}
 
 h1 {
     font-family: 'Libre Caslon Text', serif;
@@ -99,7 +149,7 @@ h2 {
 
 header {
     background-color: rgb(0,63,94);
-    z-index: 2;
+    z-index: 3;
     position: fixed;
     top: 0;
     grid-area: he;
@@ -113,7 +163,7 @@ header {
 nav{
     position: fixed;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 
     background-color: rgb(0,63,94);
     padding: 5px;
