--- a/css/style.css
+++ b/css/style.css
@@ -9,30 +9,21 @@
 
 /* Styling av ID */
 
-/* Start Sida */
-
-#grid_wrapper_start {
-    color: #000;
-    background-color: white;
+#grid_wrapper_styrelse {
+    background-color: #fff;
+    height: 100vh;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 600px 800px 100px;
-    grid-template-areas: 
-    "s1"
-    "s2"
-    "fo";
 }
 
 #welcome_text_section {
-    margin-top: 75px;
-    grid-area: s1;
+    margin: 175px 30px 50px 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0 10% 0 10%;
-    z-index: 1;
     color: #fff;
+    background-color: rgb(0,63,94);
+    padding: 20px;
 }
 
 #actual_updates_section {
@@ -47,23 +38,20 @@
 
 #img_area {
     position: absolute;
-    top: 75px;
-    left: -5px;
-    height: 600px;
-    width: 110%;
-    overflow-y: hidden;
+    top: 0;
+    height: 100vh;
+    width: 100%;
 
-
-    background-image: url(/img/tallin_2.jpg);
+    background-image: url(/img/tallin.jpg);
     background-size: cover;
     background-position: center;
     color: #fff;
-    filter: blur(5px);
+    z-index: -1;
 }
 
 
 #burger {
-    margin-right: 20px;
+    margin-right: 30px;
     cursor: pointer;
 }
 
@@ -77,29 +65,37 @@
 }
 
 #link_list {
+    position: absolute;
+    top: -100vh;
     list-style: none;
     background-color: #fff;
     height: 100vh;
     width: 100%;
-    position: absolute;
-    top: -100vh;
-
+    
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    transition: all 1s;
+    transition: all 0.5s;    
+    font-size: 20px;
 }
 
 .link_list_visible {
-    transform: translateY(100vh);
+    transform: translatey(100vh);
+    margin-top: 80px;
 }
 
 #img_vapen {
-    height: 70px;
+    height: 80px;
     width: auto;
     margin-right: 5px;
-    margin-left: 10px;
+    margin-left: 5px;
+}
+
+#logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
@@ -108,10 +104,9 @@
 
 /*Styling av CLASS */
 
-/* Start Sida */
-
 .start_p {
     text-align: center;
+    margin: 15px 10px 0 10px;
 }
 
 .burger_x_form #burger_line_2 {
@@ -128,18 +123,19 @@
 
 /* Styling av taggar */
 
-/* Start Sida */
-
 body {
-    overflow-x: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: rgb(0,63,94);
 }
 
 h1 {
     font-family: 'Libre Caslon Text', serif;
 
     color: #fff;
-    letter-spacing: 4px;
-    font-weight: bold;
+    font-size: 30px;
 }
 
 h2 {
@@ -147,35 +143,20 @@ h2 {
     text-align: center;
 }
 
-header {
-    background-color: rgb(0,63,94);
-    z-index: 3;
-    position: fixed;
+#nav{
+    background-color: transparent;
+    position: absolute;
     top: 0;
-    grid-area: he;
     display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    height: 80px;
-    width: 300px;
-}
-
-nav{
-    position: fixed;
-    top: 0;
-    z-index: 2;
-
-    background-color: rgb(0,63,94);
-    padding: 5px;
-    display: flex;
-    justify-content: flex-end;
+    justify-content: space-between ;
     align-items: center;
     height: 80px;
     width: 100%;
+    z-index: 1;
 }
 
 footer {
-    grid-area: fo;
+    background-color: rgb(0,63,94);
 }
 
 img {
@@ -184,8 +165,20 @@ img {
     margin: 30px;
 }
 
+a {
+    color:rgb(0,63,94);
+    text-decoration: none;
+}
+
 /* Media Queries */
 
 @media screen and (min-width: 700px) {
+    header {
+
+    }
+
+    nav {
+
+    }
 
 }
