--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     height: 100vh;
     display: grid;
     grid-template-columns: 100vw;
-    grid-template-rows: 100vh auto 600px 300px;
+    grid-template-rows: 100vh auto 600px 200px;
     grid-template-areas: 
     "s1"
     "s2"
@@ -26,12 +26,12 @@
     height: 100vh;
     display: grid;
     grid-template-columns: 100vw;
-    grid-template-rows:auto auto auto auto auto;
+    grid-template-rows:auto auto auto auto 200px;
     grid-template-areas: 
-    "s1"
-    "s2" 
-    "s3"
-    "s4"
+    "s1f"
+    "s2f" 
+    "s3f"
+    "s4f"
     "fo"
     ;
 }
@@ -40,10 +40,7 @@
 
 }
 
-#wrapper {
-    position: absolute;
-    top: 0;
-    padding-top: 80px;
+.wrapper {
     background-color: #F3F1EF;
     height: auto;
     width: 100%;
@@ -54,7 +51,6 @@
 }
 
 #welcome_text_section {
-    width: 100%;
     grid-area: s1;
     display: flex;
     flex-direction: column;
@@ -79,7 +75,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #fff;
-    color: #273353;;
+    color: #273353;
 }
 
 #nav{
@@ -108,13 +104,14 @@
 }
 
 #styrelse_section {
-    margin-top: 20px;
+    padding-top: 90px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     color: #273353;
+    background-color: #F3F1EF;
 }
 
 #slakt_historia_section {
@@ -127,8 +124,23 @@
     padding: 100px 20px 20px 10px;
 }
 
+#img_area {
+    position: absolute;
+    top: 0;
+    height: 100vh;
+    width: 100vw;
+
+    background-image: url(/img/tallin.jpg);
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    z-index: -1;
+    overflow-x: hidden;
+}
+
 #besok_slaktrad_section {
-    background-image: url(../img/historic_archive.jpg);
+    background-image: url(../img/slakttrad.jpg);
+    background-position: center;
     height: 600px;
     width: 100%;
     display: flex;
@@ -144,11 +156,11 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 15px;
+    padding: 15px 10px 0px 10px;
 }
 
 #section_forening {
-    grid-area: s1;
+    grid-area: s1f;
     padding: 80px 10px 10px 10px;
     text-align: center;
     background-color: #F3F1EF;
@@ -164,7 +176,7 @@
 }
 
 #forening_img1_section {
-    grid-area: s2;
+    grid-area: s2f;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -172,17 +184,17 @@
 }
 
 #forening_img2_section {
-    grid-area: s3;
+    grid-area: s3f;
     display: flex;
-    align-items: flex-start;
     justify-content: center;
+    align-items: flex-start;
 }
 
 #forening_img3_section {
-    grid-area: s4;
+    grid-area: s4f;
     display: flex;
-    align-items: flex-start;
     justify-content: center;
+    align-items: flex-start;
 }
 
 .forening_img {
@@ -197,20 +209,6 @@
     padding-top: 30px;
     margin: 0px;
     color: #273353;
-}
-
-
-#img_area {
-    position: absolute;
-    top: 0;
-    height: 100vh;
-    width: 100%;
-
-    background-image: url(/img/tallin.jpg);
-    background-size: cover;
-    background-position: center;
-    color: #fff;
-    z-index: -1;
 }
 
 #slakt_historia_rubric {
@@ -243,8 +241,6 @@
 .burger_other {
     background-color: #273353;
 }
-
-
 
 #link_list {
     position: absolute;
@@ -399,7 +395,7 @@ h2 {
 }
 
 footer {
-    width: 100%;
+    width: 100vw;
     background-color: #273353;
     display: flex;
     justify-content: center;
@@ -423,15 +419,212 @@ p {
     margin-bottom: 1.2rem;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 /* Media Queries */
 
 @media screen and (min-width: 700px) {
-    header {
 
-    }
+#nav {
 
-    nav {
+}
 
-    }
+#link_list {
+    position: static;
+    list-style: none;
+    background-color: #fff;
+    color: #273353;
+    height: 80px;
+    width: 100vw;
+    
+    display: inline;
+    text-align:end;
+    padding-top: 30px;
+}
+
+li {
+    display: inline;
+    margin: 50px;
+    font-weight: bold;
+}
+
+#burger {
+    display: none;
+}
+
+h1 {
+    color: #273353;
+}
+
+/* Startsida */
+#grid_wrapper_start{
+    height: 100vh;
+    width: 100vw;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 100vh auto auto 200px;
+    grid-template-areas: 
+    "s1"
+    "s2"
+    "s3"
+    "fo"
+    ;
+}
+
+#welcome_text_article {
+    height: 100%;
+    width: 50vw;
+    margin-top: 160px;
+    padding: 100px 0px 0px 10px;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+.start_p {
+    margin: 0px;
+    margin-top: 20px;
+}
+
+h2 {
+    margin: 0px;
+}
+
+#img_area {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 50%;
+    margin-top: 80px;
+
+    background-image: url(/img/tallin.jpg);
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    z-index: -1;
+    overflow-x: hidden;
+}
+
+#welcome_text_section {
+    grid-area: s1;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+#actual_updates_section {
+    background-color: #fff;   
+}
+
+#förening_information {
+    background-color: #F3F1EF;
+    flex-direction: row;
+}
+
+p {
+    margin-top: 10px;
+}
+
+#slaktfoto {
+    width: 50%;
+}
+
+#update_flex_change {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.update_article {
+    height: 500px;
+    width: 300px;
+    margin-top: 10px;
+    margin-right: 20px;
+    background-color: #F3F1EF;
+}
+
+/* Styrelse */
+.wrapper {
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.board_member_card {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: 400px;
+    width: 300px;
+    background-color: #fff;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    color: #273353;
+}
+
+.member_info {
+    width: 80%;
+    align-items: center;
+}
+
+/* Historia */
+#slakt_historia_section {
+    padding-right: 40%;
+    padding-left: 70px;
+}
+
+/* Förening */
+#grid_wrapper_forening {
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows:250px 250px 250px 200px;
+    grid-template-areas: 
+    "s1f s2f"
+    "s1f s3f" 
+    "s1f s4f"
+    "fo fo"
+    ;
+}
+
+#section_forening {
+    grid-area: s1f;
+    padding: 80px 10px 10px 10px;
+    text-align: start;
+    background-color: #F3F1EF;
+    color: #273353;
+    border-right: solid #273353;
+}
+
+#forening_img1_section{
+    background-color: #F3F1EF;
+}
+
+#forening_img2_section{
+    background-color: #F3F1EF;
+}
+
+#forening_img3_section{
+    background-color: #F3F1EF;
+}
+
+.forening_img{
+
+    width: 80%;
+}
+
+#forening_h2 {
+    padding-top: 80px;
+}
+
+.non_center_forening {
+    text-align: start;
+    padding-right: 100px;
+}
 
 }
